--- a/src/Application/Brickstorm/SiteBundle/Resources/views/layout.html.twig
+++ b/src/Application/Brickstorm/SiteBundle/Resources/views/layout.html.twig
@@ -35,11 +35,11 @@
             <span class="i-bar"></span>
             <span class="i-bar"></span>
           </a>
-          <a class="brand" href="#">Brickstorm</a>
+          <a class="brand" href="#">Br!ckstorm</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="#">projects</a></li>
-              <li><a href="#contact">contact</a></li>
+              <li class="active"><a href="{{ path('homepage') }}">online</a></li>
+              <li><a href="{{ path('offline') }}">offline</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -54,7 +54,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2012</p>
+        <p> Br!ckstorm 2012</p>
       </footer>
 
     </div> <!-- /container -->
