--- a/src/Application/Brickstorm/SiteBundle/Resources/views/Main/online.html.twig
+++ b/src/Application/Brickstorm/SiteBundle/Resources/views/Main/online.html.twig
@@ -48,6 +48,11 @@
 </div>
 <div class="row">
   <div class="span4">
+    <h2>Fightback</h2>
+    <p>A collective survey of big coomercial compagnies or public services. are-they really trying to bring you the best service ?</p>
+    <p><a class="btn" href="#">View details &raquo;</a></p>
+  </div>
+  <div class="span4">
     <h2>Solider</h2>
     <p>We don't need ONG. Help them directly</p>
     <p><a class="btn" href="#">View details &raquo;</a></p>
