--- a/src/Application/Brickstorm/SiteBundle/Resources/views/Main/online.html.twig
+++ b/src/Application/Brickstorm/SiteBundle/Resources/views/Main/online.html.twig
@@ -53,6 +53,11 @@
     <p><a class="btn" href="#">View details &raquo;</a></p>
   </div>
   <div class="span4">
+    <h2>BringIt2me</h2>
+    <p>Get anything from anywhere !</p>
+    <p><a class="btn" href="#">View details &raquo;</a></p>
+  </div>
+  <div class="span4">
     <h2>Solider</h2>
     <p>We don't need ONG. Help them directly</p>
     <p><a class="btn" href="#">View details &raquo;</a></p>
