--- a/src/Application/Brickstorm/SiteBundle/Resources/views/Main/offline.html.twig
+++ b/src/Application/Brickstorm/SiteBundle/Resources/views/Main/offline.html.twig
@@ -15,12 +15,17 @@
 <div class="row">
   <div class="span4">
     <h2>School</h2>
-    <p>Architecture...</p>
+    <p>Architecture concours...</p>
     <p><a class="btn btn-success" href="#">Join &raquo;</a></p>
   </div>
   <div class="span4">
-    <h2>Construction</h2>
-    <p>your house like as easily as a lego.</p>
+    <h2>Bricks for life</h2>
+    <p>Your house like as easily as a lego.</p>
+    <p><a class="btn" href="#">Join &raquo;</a></p>
+  </div>
+  <div class="span4">
+    <h2>Pioche</h2>
+    <p>Bring your city where she should be.</p>
     <p><a class="btn" href="#">Join &raquo;</a></p>
   </div>
 </div>
